[workspace]
members = ["monitor"]
default-members = ["monitor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/andrewdavidmackenzie/pingr/"
readme = "README.md"
edition = "2021"