[workspace]
members = ["wimon", "collectr"]
default-members = ["wimon"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/andrewdavidmackenzie/pingr/"
readme = "README.md"
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true
codegen-units = 1