[workspace]
members = ["collectr", "configr", "data_model", "picomon", "viewr", "wimon"]
default-members = ["wimon"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/andrewdavidmackenzie/pingr/"
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true