[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
data_model = { path = "../data_model"}
worker = "0.0.15"
serde_derive = "~1.0"
serde = "~1.0"
serde_json = "1.0.107"

[profile.release]
lto = true
strip = true
codegen-units = 1
