[package]
name = "collectr"
version = "0.1.0"
edition = "2021"
description = "CloudFlare worker to accept Monitoring reports from devices running wimon or similar"
repository.workspace = true
license.workspace = true
authors.workspace = true

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
name = "worker"
path = "src/worker.rs"

[dependencies]
data_model = { path = "../data_model"}
worker = { version = "0.0.23", features = ["queue"]}
serde_derive = "~1.0"
serde = "~1.0"
serde_json = "1.0.107"