[package]
name = "picomon"
edition = "2021"
version = "0.1.0"

[dependencies]
embedded-nal-async = {version = "0.7.1" }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0"}
embassy-usb-logger = { version = "0.1.0"}
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
reqwless = { version="0.11.0", default-features = false, features = ["embedded-tls"]}
embedded-alloc = "0.5.1" # see if can be removed - maybe needed by TLS
# Needed to workaround an embassy dns server count bug
smoltcp = { version = "0.11.0", default-features = false, features = ["dns-max-server-count-4"]}
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2"
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
heapless = "0.8"
# To convert device_id into hex for use as a string
faster-hex = {  version = "0.9.0", default-features = false }

[build-dependencies]
heapless = "0.8"
# for reading config from a file in build.rs
serde_derive = "~1.0"
serde = "~1.0"
toml = { version = "0.8.8" }
url = "2.2"
wimon = { path = "../wimon" }