[package]
name = "viewr"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
