[package]
name = "viewr"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.3", features = ["csr"] }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
