[package]
name = "viewr"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

[[bin]]
name = "viewr"
path = "src/viewr.rs"

[dependencies]
data_model = { path = "../data_model"}
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.7", features = ["csr"] }
leptos_router = {version = "*", features = ["csr"]}
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.34"