[package]
name = "wimon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wimon"
path = "src/main.rs"

[lib]
name = "config"
path = "src/lib/config.rs"

[features]
default = ["ssids"]
ssids = ["wifiscanner"]

[dependencies]
data_model = { path = "../data_model" }
machineid-rs = "1.2.4"

# for reading config from a file
serde_derive = "~1.0"
serde = "~1.0"
serde_json = "1.0.107"
toml = { version = "0.8.8" }
url = "2.2"
curl = {version = "~0.4" }
ctrlc = {version = "3.4.1", features = ["termination"] }
service-manager = "0.5.1"
wifiscanner = {version = "0.5.1", optional = true}