[package]
name = "wimon"
version = "0.1.0"
edition = "2021"

[lib]
name = "config"
path = "src/lib/config.rs"

[[bin]]
name = "wimon"
path = "src/main.rs"

[features]
default = []
ssids = ["wifiscanner"]

[dependencies]
data_model = { path = "../data_model" }

# for creating a unique machine ID
machineid-rs = { version = "1.2.4", git = "https://github.com/andrewdavidmackenzie/machineid-rs", branch = "patch-1"}

# for reading config from a file
serde_derive = "~1.0"
serde = "~1.0"
serde_json = "1.0.107"
toml = { version = "0.8.8" }
url = "2.5"

# for making network requests
curl = {version = "~0.4", default-features = false, features = ["rustls"]}

# for catching signals
ctrlc = {version = "3.4.1", features = ["termination"] }

# for installing as a system service
service-manager = "0.7.0"

# for scanning wifi and getting SSIDs visible
wifiscanner = {version = "0.5.1", optional = true}